Modified stylying of dots css class to be absolute instead of relative and wrap it in div with position relative --> i did this to avoid the negative space of dots div

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -162,13 +162,16 @@
 }
 
 .dots{
-    position: relative;
+    position: absolute;
     height: 40vw;
     width: 42%;
     margin: 0 auto;
     border: 1px dashed red;
-    bottom: 60vw;
+    bottom: 20vw;
+    left: 28vw;
     @media screen and(max-width: 800px) {
+        bottom: 0vw;
+        left: 14vw;
         height: 60vw;
         width: 70%;
     }
